--- a/app/src/main/res/menu/solver_menu.xml
+++ b/app/src/main/res/menu/solver_menu.xml
@@ -8,5 +8,7 @@
     <item
         android:id="@+id/menu_astar"
         android:title="A*" />
-    <item android:title="TEST" />
+    <item
+        android:id="@+id/menu_iterative"
+        android:title="Iterative deepening" />
 </menu>
